--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,6 @@ p
 {
     font-size: 12pt;
     color: rgb(255,255,255);
-    /*margin-top: -5.5vw;*/
     margin-left: -0.8vw;
     text-align: justify;
 }
@@ -54,7 +53,7 @@ p
 .floating-box
 {
     display: inline-block;
-    width: 200px;
+    width: 100%;
     height: 80px;
     margin-right: 2vw;
     margin-bottom: 2vw;
@@ -70,4 +69,10 @@ p
     background-color: rgb(255, 0, 0);
     color: rgb(255, 255, 255);
     box-shadow: 8px 8px rgb(255, 255, 255);
+}
+
+@media only screen and (min-width: 768px) {
+    .floating-box{
+        width: 320px;
+    }
 }
