--- a/styles.css
+++ b/styles.css
@@ -67,30 +67,37 @@ p
     margin-top: 6vw;
 }
 
-.floating-box
-{
-    display: inline-block;
-    width: 100%;
-    height: 80px;
-    margin-right: 2vw;
-    margin-bottom: 2vw;
+.button {
     background-color: rgb(0, 255, 255);
-    font-size: 24pt;
+    border: none;
+    color: rgb(0,0,0);
+    /*padding: 16px 32px;*/
     text-align: center;
-    line-height: 80px;
-    color: rgb(0, 0, 0);
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24pt;
+    margin-right: 1vw;
+    margin-bottom: 2vw;
+    line-height: 36pt;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    box-shadow: 0px 0px rgb(255, 255, 255);
+    width: 100%;
 }
-
-.floating-box:hover
-{
-    background-color: rgb(255, 0, 0);
-    color: rgb(255, 255, 255);
+.button:hover {
+    background-color: rgb(255,0,0);
+    color: white;
     box-shadow: 8px 8px rgb(255, 255, 255);
 }
 
 @media only screen and (min-width: 768px)
 {
     .floating-box
+    {
+        width: 320px;
+    }
+    .button
     {
         width: 320px;
     }
