--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body
 {
-    background-color: rgb(0, 0, 150);
+    background-color: rgb(255, 255, 255);
     font: 20px 'Roboto', sans-serif;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 h1
@@ -28,7 +28,15 @@ h1
     margin-top: -26.5vw;
     margin-left: -4vw;
     animation-name: header1anim;
-    animation-duration: 0.4s;
+    animation-duration: 0.35s;
+}
+
+#headers
+{
+    background-color: rgb(0, 0, 255);
+    margin-left: -2vw;
+    margin-right: -2vw;
+    padding-left: 2vw;
 }
 
 h2
@@ -42,14 +50,14 @@ h2
 p
 {
     font-size: 12pt;
-    color: rgb(255,255,255);
+    color: rgb(0,0,0);
     margin-left: -0.8vw;
     text-align: justify;
 }
 
 #chapter
 {
-    margin-top: -3vw;
+    margin-top: 1vw;
     margin-left: 13vw;
     line-height: 18pt;
 }
@@ -68,19 +76,19 @@ p
 }
 
 .button {
-    background-color: rgb(0, 255, 255);
+    background-color: rgb(0, 0, 255);
     border: none;
-    color: rgb(0,0,0);
+    color: rgb(255,255,255);
     /*padding: 16px 32px;*/
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 24pt;
+    font-size: 36pt;
     margin-right: 1vw;
     margin-bottom: 2vw;
     line-height: 36pt;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+    -webkit-transition-duration: 0.15s; /* Safari */
+    transition-duration: 0.15s;
     cursor: pointer;
     box-shadow: 0px 0px rgb(255, 255, 255);
     width: 100%;
@@ -88,7 +96,7 @@ p
 .button:hover {
     background-color: rgb(255,0,0);
     color: white;
-    box-shadow: 8px 8px rgb(255, 255, 255);
+    box-shadow: 8px 8px rgb(0, 0, 0);
 }
 
 @media only screen and (min-width: 768px)
@@ -108,13 +116,30 @@ p
     #secondHeader
     {
         width: 100%;
+        margin-top: -20vw;
+
+    }
+    #firstHeader
+    {
+        margin-top: -18vw;
+    }
+    h1
+    {
+        font-size: 20vw;
+        letter-spacing: -2vw;
+    }
+    h2
+    {
+        font-size: 6.7vw;
+        letter-spacing: 0vw;
+        white-space: nowrap;
     }
 }
 
 #stretch
 {
     animation-name: stretchAnim;
-    animation-duration: 0.25s;
+    animation-duration: 0.2s;
 }
 
 @keyframes stretchAnim {
