--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body
     background-color: rgb(0, 0, 0);
     font: 20px 'Roboto', sans-serif;
     color: rgb(255, 255, 255);
+    margin: 0px;
 }
 
 h1
