--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,11 @@ body
 
 h1
 {
-    font-size: 15vw;
+    color: rgb(255,255,255);
     line-height: 80%;
     margin: 0px;
     text-decoration: none;
+    font-size: 15vw;
 }
 
 h2
@@ -25,10 +26,26 @@ p
     font-weight: 10;
 }
 
+#chapter
+{
+    font: 11pt 'Open Sans', sans-serif;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+}
+
 #links
 {
     font-size: 20pt;
+}
+
+span
+{
+    color: rgb(0,0,255);
     text-decoration: underline;
+}
+span:hover
+{
+    color: rgb(255,255,255);
 }
 
 a
@@ -41,13 +58,19 @@ a:hover
     color: rgb(0,0,255);
 }
 
+footer
+{
+    font-size: 8pt;
+    margin-top: 5vw;
+}
+
+
 @media only screen and (min-width: 768px)
 {
     h1
     {
         font-size: 4.8vw;
         margin: 0px;
-        background-color: rgb(0,0,0);
         line-height: 120%;
     }
 }
