--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ h1
     text-decoration: none;
     font-size: 15vw;
 }
+h1:hover
+{
+    color: rgb(0,0,255);
+}
 
 h2
 {
@@ -35,13 +39,14 @@ p
 
 #links
 {
-    font-size: 20pt;
+    font-size: 10vw;
 }
 
 span
 {
     color: rgb(0,0,255);
     text-decoration: underline;
+    display: block;
 }
 span:hover
 {
@@ -72,5 +77,13 @@ footer
         font-size: 4.8vw;
         margin: 0px;
         line-height: 120%;
+    }
+    span
+    {
+        display: inline;
+    }
+    #links
+    {
+        font-size: 20pt;
     }
 }
