--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body
     font: 20px 'Roboto', sans-serif;
     color: rgb(255, 255, 255);
     margin: 0px;
+    text-shadow: 2px 0px hsl(60, 100%, 50%), -2px -0px hsl(0, 100%, 50%);
 }
 
 h1
