--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,11 @@ p
     text-shadow: 1px 0px hsl(190, 100%, 50%), -1px 0px hsl(40, 100%, 50%);
 }
 
+.sel
+{
+    font: 20px 'Fondamento', cursive;
+}
+
 #chapter
 {
     font: 11pt 'Open Sans', sans-serif;
@@ -48,13 +53,13 @@ p
     text-shadow: 1px 0px hsl(90, 100%, 50%);
 }
 
-span
+.chapterLink
 {
     color: rgb(0,0,255);
     text-decoration: underline;
     display: block;
 }
-span:hover
+.chapterLink:hover
 {
     color: rgb(255,0,0);
 }
@@ -84,7 +89,7 @@ footer
         margin: 0px;
         line-height: 120%;
     }
-    span
+    .chapterLink
     {
         display: inline;
     }
