--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: rgb(0, 0, 150);
+    background-color: rgb(0, 0, 255);
     font: 20px 'Roboto', sans-serif;
     color: rgb(255, 255, 255);
 }
@@ -11,6 +11,21 @@ h1
     letter-spacing: -3vw;
     color: rgb(0,255,255);
     font-style: italic;
+}
+
+#imageContainer
+{
+    position: relative;
+}
+
+img
+{
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    z-index: 1;
+    transition: 0.5s;
+    transition-timing-function: ease;
 }
 
 #secondHeader
